<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#ffffffff" >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logolug3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"
        android:textColor="#000"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:text="@string/app_version" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/splash_title"
        android:id="@+id/textView"
        android:textSize="30dp"
        android:textStyle="italic"
        android:textColor="#000"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:layout_alignBottom="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/splash_subtitle"
        android:id="@+id/textView2"
        android:layout_marginTop="81dp"
        android:textSize="30dp"
        android:textColor="#000"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true" />

</RelativeLayout>